fix: centering of body & hide back button on mobile

--- a/app/src/main.css
+++ b/app/src/main.css
@@ -104,6 +104,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: auto auto;
 }
 
 #container,
@@ -769,5 +770,8 @@ details[open] .down-arrow {
   }
   .triple-grid {
     grid-template-columns: 1fr;
+  }
+  .last-page {
+    display: none;
   }
 }
